# spur

./: .dockerignore  Cargo.toml
.claude/skills/deploy-spur/: SKILL.md
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  cleanup-images.yml  e2e.yml  helm.yml  nightly.yml  release.yml
crates/spur-cli/src/: exit_fmt.rs  format_engine.rs  image.rs  main.rs  sacct.rs  sacctmgr.rs  sattach.rs  sbatch.rs  scontrol.rs  sdiag.rs  smd.rs  squeue.rs  srun.rs  sshare.rs  sstat.rs  strigger.rs
crates/spur-core/src/: admission.rs  job.rs  node.rs  qos.rs  wal.rs
crates/spur-k8s/src/: agent.rs  job_controller.rs  node_watcher.rs
crates/spur-metrics/src/: lib.rs  node.rs  rpc.rs  scheduler.rs
crates/spur-metrics/src/export/: jobs.rs  mod.rs  nodes.rs  rpc.rs  scheduler.rs
crates/spur-metrics/tests/: node_export_golden.rs  rpc_export_golden.rs  scheduler_export_golden.rs
crates/spur-metrics/tests/fixtures/: nodes.openmetrics_1_0.prom  nodes.slurm_0_0_4.prom  rpc.prom  scheduler.prom
crates/spur-net/: Cargo.toml
crates/spur-net/src/: oci.rs
crates/spur-spank/src/: lib.rs
crates/spur-tests/: Cargo.toml
crates/spur-tests/src/: lib.rs  t01_run.rs  t07_sched.rs  t17_submit.rs  t21_acctmgr.rs  t50_core.rs  t52_config.rs  t55_format.rs  t58_spank.rs  t60_suspend.rs
crates/spur-tests/src/bare_metal/: config.rs  fixture.rs  mod.rs  ssh.rs
crates/spur-tests/src/bare_metal/gpu/: mod.rs  multi_node.rs  single_node.rs
crates/spur-tests/src/bare_metal/multi_node/: container.rs  dispatch.rs  mod.rs  scheduling.rs
crates/spur-tests/src/bare_metal/single_node/: container.rs  jobs.rs  lifecycle.rs  mod.rs
crates/spurctld/: Cargo.toml
crates/spurctld/src/: accounting.rs  cluster.rs  limits_cache.rs  main.rs  metrics_proto.rs  metrics_server.rs  raft.rs  rpc_middleware.rs  rpc_stats.rs  sched_stats.rs  scheduler_loop.rs  server.rs
crates/spurd/src/: agent_server.rs  container.rs  executor.rs  landlock.rs  pmi.rs  reporter.rs  seccomp.rs
crates/spurdbd/src/: db.rs  server.rs
crates/spurrestd/src/: routes.rs
deploy/: Dockerfile
deploy/ansible/: README.md  ansible.cfg  deploy.yml  teardown.yml
deploy/ansible/group_vars/: all.yml
deploy/ansible/inventory/: hosts.example.ini  hosts.ha.example.ini
deploy/ansible/roles/spur_agent/tasks/: main.yml
deploy/ansible/roles/spur_controller/tasks/: main.yml
deploy/ansible/roles/spur_controller/templates/: spur.conf.j2
deploy/ansible/roles/spur_install/defaults/: main.yml
deploy/ansible/roles/spur_install/tasks/: main.yml
deploy/ansible/roles/spur_verify/tasks/: main.yml
deploy/ansible/roles/spur_wireguard/defaults/: main.yml
deploy/ansible/roles/spur_wireguard/tasks/: main.yml
deploy/helm/spur/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/spur/crds/: spurjob-crd.yaml
deploy/helm/spur/templates/: NOTES.txt  _helpers.tpl  accounting.yaml  agent.yaml  configmap.yaml  controller.yaml  namespace.yaml  operator.yaml  rbac.yaml  restd.yaml  serviceaccount.yaml
deploy/k8s/: operator.yaml  rbac.yaml  spurctld.yaml  spurd.yaml  spurdbd.yaml  spurrestd.yaml
docs/design/: 2026-06-12-out-of-memory-state.md  2026-06-12-preempted-transitions.md  2026-06-12-reason-code-vocab.md
docs/superpowers/plans/: 2026-06-12-suspend-resume.md
docs/superpowers/specs/: 2026-06-12-suspend-resume-design.md
proto/: slurm.proto
tests/e2e/native_host/: cluster.py  test_suspend_resume.py
tests/native_host/e2e/: cluster.py  test_accounting.py
