[workspace]
resolver = "2"
members = [
    "crates/spur-proto",
    "crates/spur-core",
    "crates/spur-net",
    "crates/spur-sched",

    "crates/spurctld",
    "crates/spurd",
    "crates/spurdbd",
    "crates/spurrestd",
    "crates/spur-cli",
    "crates/spur-ffi",
    "crates/spur-spank",
    "crates/spur-k8s",
    "crates/spur-tests",
    "crates/spur-update",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ROCm/spur"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
backoff = { version = "0.4", features = ["tokio"] }

# gRPC + protobuf
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"

# REST API
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
# Consensus
openraft = { version = "0.9", features = ["serde"] }

# K8s
kube = { version = "0.96", features = ["runtime", "derive", "client", "ws"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
schemars = "0.8"

# Unix
nix = { version = "0.29", features = ["process", "signal", "fs", "user", "sched", "mount"] }

# Auth
jsonwebtoken = "9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
dashmap = "6"
parking_lot = "0.12"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
semver = "1"
sha2 = "0.10"
base64 = "0.22"

# Internal
spur-update = { path = "crates/spur-update" }
