[workspace]
resolver = "2"
members = [
    "crates/spur-proto",
    "crates/spur-core",
    "crates/spur-net",
    "crates/spur-sched",
    "crates/spur-metrics",

    "crates/spurctld",
    "crates/spurd",
    "crates/spurdbd",
    "crates/spur-cli",
    "crates/spur-ffi",
    "crates/spur-spank",
    "crates/spur-k8s",
    "crates/spur-tests",
    "crates/spur-update",
    "crates/spur-devices",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/ROCm/spur"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
backon = { version = "1", features = ["tokio-sleep"] }

# gRPC + protobuf
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost-build = "0.14"

# REST API
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"

# Database
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "chrono", "uuid"] }
# Consensus
openraft = { version = "0.9", features = ["serde"] }

# K8s
kube = { version = "4.0", default-features = false, features = ["runtime", "derive", "client", "rustls-tls", "ws"] }
k8s-openapi = { version = "0.28", features = ["latest", "schemars"] }
schemars = "1"

# Unix
nix = { version = "0.31", features = ["process", "signal", "fs", "user", "sched", "mount"] }

# Auth
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Metrics export
prometheus-client = "0.25"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
dashmap = "6"
parking_lot = "0.12"
bytes = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
semver = "1"
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"
subtle = "2"
serial_test = "3"

# Internal
spur-update = { path = "crates/spur-update" }

[workspace.lints.clippy]
unnecessary_unwrap = "warn"
clone_on_copy = "warn"
if_same_then_else = "warn"
not_unsafe_ptr_arg_deref = "warn"
redundant_field_names = "warn"
redundant_pattern_matching = "warn"
collapsible_str_replace = "warn"
manual_ok_err = "warn"
manual_range_patterns = "warn"
derivable_impls = "warn"
useless_vec = "warn"
for_kv_map = "warn"
nonminimal_bool = "warn"
let_and_return = "warn"
redundant_closure = "warn"
single_match = "warn"
needless_return = "warn"
doc_lazy_continuation = "warn"
should_implement_trait = "warn"
too_many_arguments = "warn"
large_enum_variant = "warn"
result_large_err = "warn"
type_complexity = "warn"
