[package]
name = "spur-net"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
