[package]
name = "spur-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
spur-proto = { path = "../spur-proto" }
spur-core = { path = "../spur-core" }
spur-sched = { path = "../spur-sched" }

spur-spank = { path = "../spur-spank" }
spur-k8s = { path = "../spur-k8s" }
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
reqwest = { workspace = true }
jsonwebtoken.workspace = true
openssh = { version = "0.11", default-features = false, features = ["process-mux"] }

[dev-dependencies]
serial_test = "3.5.0"

[lints]
workspace = true
