[package]
name = "spurctld"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "spurctld"
path = "src/main.rs"

[dependencies]
spur-proto = { path = "../spur-proto" }
spur-core = { path = "../spur-core" }
spur-sched = { path = "../spur-sched" }
spur-metrics = { path = "../spur-metrics" }
spur-update = { path = "../spur-update" }

tokio = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hostname = "0.4.2"
openraft = { workspace = true }
axum = { workspace = true }
http = "1"
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
